# tracediff

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  trace-parsing.yml
.github/workflows/: ci.yml  publish.yml
action/: action.yml
agentdiff/: __init__.py  cli.py  diff.py  report.py  runner.py  scoring.py  suite.py  trace.py
examples/: demo_agent.py  suite.yaml
examples/claude_agent/: README.md  agent.py  suite.yaml
examples/claude_agent/workspace/notes/: meeting.md  standup.md
tests/: test_adapters.py  test_diff.py  test_scoring.py  test_suite.py  test_trace.py
tracediff/: __init__.py  adapters.py  cli.py  diff.py  report.py  runner.py  scoring.py  suite.py  trace.py
