[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tracediff"
version = "0.2.0"
description = "Structural trajectory regression testing for AI agents - diff what your agent did, not just its score."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "tracediff contributors" }]
keywords = ["ai", "agents", "evaluation", "testing", "ci", "llm", "trajectory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
]
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
tracediff = "tracediff.cli:main"

[tool.setuptools.packages.find]
include = ["tracediff*"]
